--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,43 @@
     margin: auto;
 }
 
+/* Modal 
+===================== */
+
+.reviews__modal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    background: rgb(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+}
+
+.reviews__modal__inner {
+    position: relative;
+    position: fixed;
+    opacity: 1;
+    width: 542px;
+    height: 744px;
+    background: #fff;
+    left: 50%;
+    margin-left: -271px;
+    top: 10%;
+}
+
+.close__modal__reviews {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: -50px;
+    fill: #131313;
+    width: 28.5px;
+    height: 28.5px;
+    opacity: 1;
+    z-index: 999999;
+    stroke-width: 30;
+}
+
 /* Menu 
 ===================== */
 
@@ -140,7 +177,7 @@ li {
 
 
 .menu__table a {
-    max-width: 600px;
+    max-width: max-content;
     width: 100%;
     text-decoration: none;
     color: #131313;
@@ -152,12 +189,11 @@ li {
     transition: 1s;
     position: relative;
 }
-
-.menu__table a::before {
+.menu__table>li>a::before{
     content: '';
     background-image: url(/img/menu/close.svg);
     position: absolute;
-    left: 0;
+    left: -30px;
     top: 10px;
     animation-name: spinerFive;
     animation-duration: 2s;
@@ -167,20 +203,23 @@ li {
     height: 27px;
     padding: 0;
     margin: 0;
-    transition: 1s;
     opacity: 0;
 }
-
-.menu__table a:hover {
-    transition: .5s;
-    padding-left: 30px;
-    
-}
-
-.menu__table a:hover::before{
+.menu__table>li.active>a::before {
     transition: 1s;
     opacity: 1;
 }
+
+.menu__table>li {
+    transition: 0.5s;
+}
+
+.menu__table>li.active {
+    padding-left: 30px;
+    transition: 0.5s;
+}
+
+
 
 @keyframes spinerFive {
     0% {
@@ -220,6 +259,9 @@ li {
     display: none;
     max-width: 565px;
     width: 100%;
+}
+.menu__table>li.active>ul{
+    display: block;
 }
 .menu__table>li>ul.active__menu__ul{
     display: block;
@@ -295,7 +337,6 @@ li {
     width: 28.5px;
     height: 28.5px;
 }
-
 
 
 
@@ -586,6 +627,9 @@ li {
 }
 
 .input {
+    box-sizing: border-box;
+    padding: 0;
+
     height: 59px;
     max-width: 644px;
     width: 100%;
@@ -602,15 +646,43 @@ li {
     
 }
 
+input:focus::-webkit-input-placeholder {opacity:0;}/* webkit */
+input:focus::-moz-placeholder          {opacity:0;}/* Firefox 19+ */
+input:focus:-moz-placeholder           {opacity:0;}/* Firefox 18- */
+input:focus:-ms-input-placeholder      {opacity:0;}/* IE */
+
+.wrap {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row-reverse;
+    font-weight: 300;
+    font-size: 30px;
+}
+
+.input:focus {
+    padding: 2px 0 0 70px;
+}
+
+.input:focus + .tel {
+    opacity: 1;
+    color: #FFF;
+}
+
+.tel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 59px;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+}
+
 
 .input::placeholder {
     color: #fff;
 }
-
-.input:focus::-webkit-input-placeholder {opacity:0;}/* webkit */
-.input:focus::-moz-placeholder          {opacity:0;}/* Firefox 19+ */
-.input:focus:-moz-placeholder           {opacity:0;}/* Firefox 18- */
-.input:focus:-ms-input-placeholder      {opacity:0;}/* IE */
 
 
 .input__submit {
@@ -910,33 +982,16 @@ li {
 
 }
 
-/*.business__title:hover~.bussiness__content__block .business__text {        
-    transform: translate(-50%);
-    margin-left: 300px;
-    transition: 1s;
-} */
-
-/* .business__title,
-.bussiness__content__block {
-    transition: width 1s;
-    width: 0;
-    white-space: nowrap;
-  
+.business__title, .business__text {
+    width:max-content;
+    white-space: wrap;
+    transition: 1s ease;
 }
 
-.business__title:hover {
-    text-align: center;
-    transition: 1s;
-    width: 100%;
-    color: #FA5C45;
-    border-bottom: 2px dashed #FA5C45;
+.business__content:not(.bussiness__content__block):hover .business__title, .business__content:not(.bussiness__content__block):hover .business__text {
+    margin-left: 50%;
+    transform: translatex(-50%);
 }
-
-.business__title:hover~.bussiness__content__block{
-    text-align: center;
-    width: 100%;
-} */
-
 
 .business__img {
     width: 50%;
@@ -956,7 +1011,22 @@ li {
 
 .gif__portfolio__inner {
     overflow: hidden;
+    position: relative;
 }
+
+.gif__photo {
+    position: absolute;
+    z-index: 100000000000;
+    transition: left .1s ease-in, top .1s ease-in;
+    opacity: 0;
+    border-radius: 100%;
+}
+
+.gif__photo.active {
+    transition: 1s;
+    opacity: 1;
+}
+
 
 .gif__portfolio {
     padding-bottom: 250px;
@@ -1104,6 +1174,8 @@ li {
     max-width: 50%;
     width: 100%;
     padding-left: 64px;
+
+
 }
 
 .about_us__content__text {
@@ -1123,6 +1195,7 @@ li {
     overflow: hidden;
     height: 322px;
     margin-top: 40px;
+
 }
 
 .about_us__content__gif {
@@ -1133,6 +1206,7 @@ li {
 }
 
 .about_us__content__img {
+    cursor: pointer;
     position: absolute;
     bottom: -157px;
     left: -95px;
@@ -1144,9 +1218,14 @@ li {
     animation-duration: 12s;
     animation-iteration-count:infinite;
     animation-timing-function: linear;
-    mix-blend-mode: difference;
     z-index: 999;
+    stroke-width: 0;
 }
+
+
+  path.active {
+    fill: #fff;
+  }
 
 @keyframes spinerTwo {
     0% {
@@ -1211,23 +1290,10 @@ li {
     }
     
 }
-/* 
-.contacts__gif__one {
-    position: absolute;
-    margin-bottom: 90px;
-    left: 0%;
-    top: -20px;
-}
-
-.contacts__gif__two {
-    position: absolute;
-    bottom: 0;
-    left: 0%;
-} */
 
 .contacts__form__title {
     width: 300px;
-    margin-top: 229px;
+    margin-top: 91px;
     font-family: 'Century Gothic';
     font-style: normal;
     font-weight: normal;
@@ -1287,6 +1353,8 @@ li {
     color: #131313;
     outline: none;
     border: 0px;
+    box-sizing: border-box;
+
 }
 
 .contacts__input__phone::placeholder {
@@ -1302,6 +1370,37 @@ label {
     padding-bottom: 15px;
 }
 
+
+.contacts__input__phone:focus {
+    padding: 2px 0 0 70px;
+}
+
+.contacts__input__phone:focus + .tel {
+    opacity: 1;
+    color: #131313;
+    font-family: 'Futura PT Light';
+    width: 250px;
+    height: 50px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 36px;
+    line-height: 46px;
+    color: #131313;
+    outline: none;
+    border: 0px;
+    box-sizing: border-box;
+}
+
+.tel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 59px;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+}
+
 .contacts__input__submit {
     cursor: pointer;
     margin-top: 65px;
@@ -1315,7 +1414,7 @@ label {
     line-height: 26px;
     color: #FA5C45;
     background: #FFF;
-    margin-bottom: 229px;
+    margin-bottom: 90px;
 
 }
 
@@ -1752,6 +1851,27 @@ label {
     outline: none;
 }
 
+.advantages__phone:focus {
+    padding: 0px 0 0 70px;
+}
+
+.advantages__phone:focus + .tel {
+    opacity: 1;
+    max-width: 640px;
+    margin-left: auto;
+    width: 100%;
+    height: 60px;
+    border: 0;
+    margin-bottom: 40px;
+    font-family: 'Futura PT Light';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 38px;
+    color: #131313;
+    outline: none;
+}
+
 .advantages__name__phone::placeholder {
     font-family: 'Futura PT Light';
     font-style: normal;
@@ -1988,7 +2108,17 @@ label {
     max-width: 480px;
     width: 100%;
     padding-bottom: 10px;
-}
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 7;
+    -webkit-box-orient: vertical;
+    box-sizing: border-box;
+  }
+  
+  .reviews__text:hover {
+    -webkit-line-clamp: initial;
+    overflow:scroll;
+  }
 
 .reviews__btn {
     cursor: pointer;
@@ -2004,12 +2134,16 @@ label {
     background: #fff;
     border: 0;
     border-bottom: 2px dashed #B0B0B0;
-
 }
 
 .reviews__btn:hover {
     color: #FA5C45;
     border-bottom: 2px dashed #FA5C45;
+}
+
+.reviews__btn__active {
+    color: #E93F27;
+    border-bottom: 2px dashed #E93F27;
 }
 
 .reviews__btn_two {
@@ -2677,7 +2811,7 @@ label {
     }
     
     .contacts__form__title {
-        margin-top: 187px;
+        margin-top: 100px;
         font-size: 60px;
 
     }
@@ -2707,7 +2841,7 @@ label {
 
     .contacts__input__submit {
         margin-top: 132px;
-        margin-bottom: 140px;
+        margin-bottom: 35px;
     }
 
     .contacts__content {
@@ -3299,7 +3433,7 @@ label {
 
     .contacts__input__submit {
         margin-top: 60px;
-        margin-bottom: 200px;
+        margin-bottom: 107px;
     }
 
     .contacts__content {
@@ -3678,7 +3812,7 @@ label {
     }
 
     .contacts__form__title {
-        margin-top: 137px;
+        margin-top: 60px;
         width: max-content;
         font-size: 40px;
         padding-bottom: 40px;
@@ -4647,6 +4781,7 @@ label {
 }
 
 @media (max-width: 700px) {
+
     /* Form
     ===================== */
 
@@ -4687,6 +4822,7 @@ label {
 
 @media (max-width: 600px) {
 
+    
     /* Menu 
     ===================== */
     
@@ -4899,6 +5035,10 @@ label {
         min-height: auto;
     }
 
+    .business__content {
+        max-width: 100%;
+    }
+
     .business__img {
         width: 100%;
     }
@@ -4930,7 +5070,7 @@ label {
     }
 
     .contacts__form__title {
-        margin-top: 110px;
+        margin-top: 50px;
         padding-bottom: 35px;
         width: auto;
     }
