--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@ a {
 ===================== */
 
 .feedback__modal {
+    display: none;
+    padding: 0 120px;
     position: fixed;
     z-index: 10000;
     background: rgb(0, 0, 0, 0.2);
@@ -114,7 +116,7 @@ a {
 
 .feedback__modal__input {
     font-family: 'Futura PT Light';
-    max-width: 100%;
+    max-width: 685px;
     width: 100%;
     font-style: normal;
     font-weight: 300;
@@ -2392,6 +2394,7 @@ label {
     -webkit-line-clamp: 7;
     -webkit-box-orient: vertical;
     box-sizing: border-box;
+    height: 260px;
   }
   
   .reviews__text:hover {
@@ -2670,7 +2673,27 @@ label {
 
 
 @media (max-width: 1366px) {
+
+    /* Modal Feedback
+    ===================== */
+
+    .feedback__modal__inner {
+        max-height: 588px;
+    }
     
+    .feedback__modal__title {
+        font-size: 60px;
+    }
+
+    .feedback__modal__input {
+        font-size: 28px;
+    
+    }
+    
+    .feedback__modal__input::placeholder {
+        font-size: 28px;
+    }
+
     /* Menu 
     ===================== */
 
@@ -3479,6 +3502,41 @@ label {
         max-width: 1024px;
     }
 
+    /* Modal Feedback
+    ===================== */
+    .feedback__modal {
+        margin: auto;
+    }
+
+    .feedback__modal__inner {
+        position: absolute;
+        max-width: 67vw;
+        width: 100%;
+        max-height: 582px;
+        left: 0%;
+        margin-left: 0;
+
+        padding: 0 77px;
+        margin: 0 70px;
+    
+    }
+
+    .close__modal__feedback {
+        right: -45px;
+
+    }
+
+    .feedback__modal__title {
+        font-size: 60px;
+        padding-top: 80px;
+        padding-bottom: 60px;
+
+    }
+
+    .feedback__submit__text {
+        padding-top: 0px;
+    }
+
     /* Menu 
     ===================== */
 
@@ -3954,7 +4012,27 @@ label {
     ===================== */
 
     .reviews {
-        display: none;
+        padding: 0 50px;
+    }
+
+
+    .reviews__inner {
+        padding-top: 80px;
+        padding-bottom: 200px;
+        flex-direction: column;
+    }
+
+    .reviews__item:nth-child(1n) {
+        width: 100%;
+    }
+
+    .reviews__item:nth-child(2n) {
+        width: 100%;
+    }
+
+    .reviews__text {
+        max-width: initial;
+        height: 150px;
     }
 
     /* Footer
@@ -4036,6 +4114,23 @@ label {
     }
 
 @media (max-width: 860px) {
+
+    /* Modal Feedback
+    ===================== */
+
+    .feedback__modal {
+        margin: auto;
+    }
+
+    .feedback__modal__inner {
+
+        margin: 0 50px;
+    
+    }
+
+    /* Header
+    ===================== */
+
     .header__logo {
         margin-right: 33px;
     }
@@ -4043,6 +4138,9 @@ label {
     .nav__link {
         margin-right: 33px;
     }
+
+    /* Intro
+    ===================== */
 
     .intro__slider {
         width: 120px;
@@ -4269,6 +4367,55 @@ label {
 }
 
 @media (max-width: 768px) {
+
+    /* Modal Feedback
+    ===================== */
+
+    .feedback__modal__inner {
+        max-width: 69vw;
+        max-height: 450px;
+
+
+        padding: 0 60px;
+        margin: 0 40px;
+    
+    }
+
+    .feedback__modal__title {
+        font-size: 40px;
+        padding-top: 60px;
+        padding-bottom: 40px;
+
+    }
+
+    .close__modal__feedback {
+
+        width: 20px;
+        height: 20px;
+    }
+
+    .feedback__modal__input {
+        font-size: 24px;
+    }
+
+    .feedback__modal__input::placeholder {
+        font-size: 24px;
+    }
+
+    .feedback__modal__btn {
+        width: 283px;
+        height: 50px;
+        font-size: 16px;
+        margin-right: 25px;
+    }
+
+    .feedback__submit__text {
+        font-size: 14px;
+        color: #000000;
+        max-width: 230px;
+        padding-top: 0px;
+    }
+
 
     /* Menu 
     ===================== */
@@ -5096,6 +5243,58 @@ label {
         line-height: 21px;
     }
 
+    /* Reviews
+    ===================== */
+
+    .reviews {
+        padding: 0 30px;
+    }
+
+    .reviews__title {
+        font-size: 40px;
+        padding-bottom: 30px;
+    }
+
+    .reviews__inner {
+        padding-top: 60px;
+        padding-bottom: 150px;
+    }
+
+    .reviews__item__name {
+        max-width: 193px;
+        width: 100%;
+    }
+
+    .reviews__name {
+        width: 163px;
+        font-size: 20px;
+    }
+
+    .reviews__date {
+        font-size: 14px;
+    }
+
+    .reviews__text {
+        height: 120px;
+        font-size: 16px;
+    }
+
+    .reviews__item {
+        padding-bottom: 60px;
+    }
+
+    .reviews__btn {
+        width: 119px;
+        height: 29px;
+        font-size: 16px;
+    }
+
+    .reviews__btn_two {
+        height: 50px;
+        font-size: 16px;
+    }
+
+
     /* Footer
     ===================== */
 
@@ -5260,6 +5459,22 @@ label {
 }
 
 @media (max-width: 650px) {
+
+    
+    /* Modal Feedback
+    ===================== */
+
+    .feedback__modal__inner {
+        max-width: 86vw;
+        max-height: 487px;
+        padding: 0 30px;
+        margin: 2vw;
+    }
+
+    .close__modal__feedback {
+        top: -30px;
+        right: 0px;
+    }
 
     /* Advantages
     ===================== */
@@ -5877,6 +6092,53 @@ label {
 }
 
 @media (max-width: 500px) {
+
+    /* Modal Feedback
+    ===================== */
+
+    .feedback__modal__inner {
+        max-width: 83vw;
+        max-height: 487px;
+        padding: 0 30px;
+        margin: 2vw;
+    }
+
+    .close__modal__feedback {
+        top: -30px;
+        right: 0px;
+    }
+
+    .feedback__modal__title {
+        padding-top: 40px;
+        padding-bottom: 0px;
+    }
+
+    .feedback__modal__input {
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+
+    .feedback__modal__input__block {
+        margin: 0;
+    }
+
+    .feedback__submit__block {
+        flex-direction: column;
+    }
+
+    .wrap__four {
+    
+        margin-top: 0;
+    }
+
+    .feedback__modal__btn {
+        margin-top: 20px;
+        width: 228px;
+        height: 50px;
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+
     /* Marketing
     ===================== */
 
@@ -5935,6 +6197,39 @@ label {
 
     .about_us__content__gif {
         max-height: 164px;
+    }
+
+    /* Reviews
+    ===================== */
+
+    .reviews {
+        padding: 0 15px;
+    }
+
+    .reviews__inner {
+        padding-top: 40px;
+        padding-bottom: 100px;
+    }
+
+    .reviews__item {
+        flex-direction: column;
+        padding-bottom: 42px;
+    }
+
+    .reviews__date {
+        padding-bottom: 20px;
+    }
+
+    .reviews__text {
+        max-height: 216px;
+        height: 100%;
+        padding-bottom: 0;
+    }
+
+    .reviews__btn_two {
+        width: 290px;
+        height: 50px;
+        font-size: 16px;
     }
 
     
@@ -6020,6 +6315,12 @@ label {
 
 
 @media (max-width: 425px) {
+    
+    .feedback__modal__inner {
+        max-width: 77vw;
+        margin: 4vw;
+    }
+
     /* Header 
     ===================== */
     .header__inner {
@@ -6162,11 +6463,30 @@ label {
 }
 
 @media (max-width: 395px) {
+
     /* Marketing
     ===================== */
 
     .marketing__title span {
         display:initial;
     }
+}
+
+@media (max-width: 360px) {
+
+    .feedback__modal__inner {
+        max-width: 75vw;
+        margin: 4vw;
+    }
+
+}
+
+@media (max-width: 330px) {
+
+    .feedback__modal__inner {
+        max-width: 71vw;
+        margin: 5vw;
+    }
+
 }
 
